# switchyard

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  switchyard_design_draft.md  switchyard_mvp_addendum.md
design/: active-checklist.md  cli-reference-codex.md  implementation_skeleton.md  phase-0-cli-probe-findings.md  phase-0-probe.py  switchyard_mvp_addendum.md
design/archive/: switchyard_design_draft.md
design/handoffs/archived/: phase-0-codex-isolation-probe.md
design/manual-instructions/: codex-instructions-reference.md
design/reference/: configuration.md  guardrails-and-reporting.md  run-artifacts.md  task-packet.md  workflow-states.md
design/reference/cli/: claude-cli-reference.md  claude.md  codex-cli-reference.md
prompts/: claude_plan_review.md  codex_plan.md
scripts/: phase-0-probe.py
src/switchyard/: __init__.py  artifacts.py  cli.py  constants.py  decision.py  handoff.py  metadata.py  process.py  reports.py  run_context.py  task_packet.py
src/switchyard/adapters/: __init__.py  base.py  claude_cli.py  codex_cli.py
src/switchyard/prompts/: __init__.py  claude_plan.md  claude_plan_refine.md  claude_plan_review.md  codex_plan.md  codex_review.md
src/switchyard/workflows/: __init__.py  adapter_spike.py  plan_review_loop.py
tests/: test_adapter_contract.py  test_adapter_spike.py  test_adapters.py  test_artifacts.py  test_cli.py  test_decision.py  test_handoff.py  test_metadata.py  test_plan_review_loop.py  test_plan_task_packet.py  test_reports.py  test_run_context.py  test_task_packet.py
