[project]
name = "switchyard"
version = "0.0.0"
description = "Local orchestration harness for multi-agent SDLC handoff workflows."
requires-python = ">=3.13"
dependencies = []

[project.scripts]
switchyard = "switchyard.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
switchyard = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
